docs: agrupando os endpoints no Swagger.
